--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/sitemap": "^3.1.6",
     "astro": "^4.12.2",
-    "astro-icon": "^1.1.0"
+    "astro-icon": "^1.1.0",
+    "swiper": "^11.1.5"
   }
 }
