--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/sitemap": "^3.1.6",
     "astro": "^4.12.2",
     "astro-icon": "^1.1.0",
+    "autoprefixer": "^10.4.19",
     "swiper": "^11.1.5"
   }
 }
